[package]
name = "adafruit-trinkey-qt2040"
version = "0.1.0"
authors = ["The rp-rs Developers"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal/tree/main/boards/adafruit-trinkey-qt2040"
description = "Board Support Package for the Adafruit Trinkey QT2040"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rp-rs/rp-hal.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp2040-hal = { path = "../../rp2040-hal", version = "0.4.0" }
cortex-m-rt = { version = "0.7.0", optional = true }
rp2040-boot2 = { version = "0.2.0", optional = true }

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
embedded-time = "0.12.0"
smart-leds = "0.3"
nb = "1.0.0"
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "fd6b6604d65a66242b52ccf7f24a95ca325991dd" }

[features]
default = ["boot2", "rt"]
boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]