[package]
name = "adafruit_macropad"
version = "0.1.0"
authors = ["Andrea Nall <anall@andreanal.com>"]
edition = "2018"
description = "Board Support Package for the Adafruit Macropad"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-hal = { path = "../../rp2040-hal", version = "0.2.0"}
cortex-m-rt = { version = "0.6.14", optional = true }

[features]
default = ["rt"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
