[package]
name = "itsy_bitsy_rp2040"
version = "0.1.0"
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal/boards/itsy_bitsy_rp2040"
description = "Board Support Package for the Adafruit ItsyBitsy RP2040"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-hal = { path = "../../rp2040-hal", version = "0.3.0"}
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
rp2040-boot2 = "0.2"
smart-leds = "0.3"
nb = "1.0.0"
pio = { git = "https://github.com/rp-rs/pio-rs.git", branch = "main" }
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs" }

[features]
default = ["rt"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
