[package]
name = "pico"
version = "0.1.0"
authors = ["evan <evanmolder@gmail.com>"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal/boards/pico"
description = "Board Support Package for the Raspberry Pi Pico"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-hal = { path = "../../rp2040-hal", version = "0.3.0"}
cortex-m-rt = { version = "0.7", optional = true }
embedded-time = "0.12.0"
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"

[dev-dependencies]
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "0.6.0-alpha.5"
rp2040-boot2 = "0.2"
nb = "1.0"
i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs", rev = "fb6167d02b7fbc46a83f344f5242823bcd16e271" }

[features]
default = ["rt"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
