[package]
name = "pimoroni-plasma-2040"
version = "0.3.0"
authors = ["Jordan Williams <jordan@jwillikers.com>", "The rp-rs Developers"]
edition = "2018"
homepage = "https://github.com/rp-rs/rp-hal/tree/main/boards/pimoroni-plasma-2040"
description = "Board Support Package for the Pimoroni Plasma 2040"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rp-rs/rp-hal.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { path = "../../rp2040-hal", version = "0.6.0" }
cortex-m-rt = { version = "0.7", optional = true }

[dev-dependencies]
rp2040-hal = { path = "../../rp2040-hal", version = "0.6.0", features = [ "defmt" ] }
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
smart-leds = "0.3.0"
ws2812-pio = "0.4.0"
fugit = "0.3.5"

defmt = "0.3.0"
defmt-rtt = "0.3.0"

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl"]

# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt","rp2040-hal/rt"]

# This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]

# Disable automatic mapping of language features (like floating point math) to ROM functions
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# This enables ROM functions for f64 math that were not present in the earliest RP2040s
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]
